# poppubase

./: README.md  buildozer.spec  main.py  pyproject.toml
app/: __init__.py
app/view/: home_style.kv
pc/: icons.py  logviewlink.txt
